# dexLib

./: CMakeLists.txt
src/: CMakeLists.txt
src/dexLib/dexinfo/: ability.cpp  ability.h  abilityinfo.cpp  abilityinfo.h  basestats.cpp  basestats.h  basestats_p.cpp  basestats_p.h  info.cpp  info.h  item.cpp  item.h  move.cpp  move.h  nature.cpp  nature.h  type.cpp  type.h  typeinfo.cpp  typeinfo.h
src/dexLib/dexreaders/: abilitydex.cpp  abilitydex.h  dex.cpp  dex.h  itemdex.cpp  itemdex.h  movedex.cpp  movedex.h  naturedex.cpp  naturedex.h  pokemondex.cpp  pokemondex.h  pokemonreader.cpp  pokemonreader.h  reader.cpp  reader.h  typedex.cpp  typedex.h
src/dexLib/item/: item.cpp  item.h
src/dexLib/move/: move.cpp  move.h
src/dexLib/pokemon/: abilityset.cpp  abilityset.h  pkmtype.cpp  pkmtype.h  pokemon.cpp  pokemon.h  pokemoninfo.cpp  pokemoninfo.h  valueset.cpp  valueset.h
tests/: CMakeLists.txt  tst_dexservice.cpp  tst_item.cpp
